--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -35,8 +35,8 @@ if(API STREQUAL Vulkan)
 		find_package(BZip2 REQUIRED)
 		find_package(ZLIB REQUIRED)
 	endif()
-	set(API_INCLUDES ${Vulkan_INCLUDE_DIRS} SpirvCross::SpirvCross)
-	set(API_LIBRARIES ${Vulkan_LIBRARIES} SpirvCross::SpirvCross)
+	set(API_INCLUDES ${Vulkan_INCLUDE_DIRS})
+	set(API_LIBRARIES ${Vulkan_LIBRARIES})
 elseif(API STREQUAL Metal)
 	list(REMOVE_ITEM ExcludeDirs Metal)
 	set(SHADER_TARGET_API Metal)
