Improve Cmake (WIP)

--- a/Sources/HodEngine/Audio/CMakeLists.txt
+++ b/Sources/HodEngine/Audio/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 3.10)
 include(Global)
 
 if (APPLE)
-    project(Window LANGUAGES CXX OBJCXX)
+	project(Window LANGUAGES CXX OBJCXX)
 else()
-    project(Window LANGUAGES CXX)
+	project(Window LANGUAGES CXX)
 endif()
 
 if (APPLE)
@@ -21,21 +21,29 @@ endif()
 assign_source_group(${Srcs}) # for VS
 
 add_library(Audio ${LIB_TYPE} ${Srcs} ${Includes})
-set_target_properties(Audio PROPERTIES FOLDER "HodEngine")
-target_precompile_headers(Audio PRIVATE "Pch.hpp")
-set_property(TARGET Audio PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
-
-add_dependencies(Audio Core)
-get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}
-	"../.."
-	${Core_INCLUDES}
+add_library(HodEngine::Audio ALIAS Audio)
+set_target_properties(Audio PROPERTIES
+	FOLDER "HodEngine"
+	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
+target_include_directories(Audio PUBLIC 
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<INSTALL_INTERFACE:include>
+)
+target_precompile_headers(Audio PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
+
 target_link_libraries(Audio
-	Core
+	PUBLIC Core
 )
 
 target_compile_definitions(Audio PUBLIC ${PLATFORM_DEFINE})
 target_compile_definitions(Audio PRIVATE HOD_AUDIO_EXPORT)
+
+install(TARGETS Audio
+	EXPORT HodEngineTargets
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+	RUNTIME DESTINATION bin
+	INCLUDES DESTINATION include
+)
