Improve Cmake (WIP)

--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 include(Global)
 
-project(Editor)
+project(Editor LANGUAGES CXX)
 
 CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes EXCLUDES FileTemplate)
 
@@ -10,17 +10,19 @@ file(GLOB_RECURSE Icons
 	"${PROJECT_SOURCE_DIR}/Icons/*.png"
 )
 
+set(GENERATED_DIR ${PROJECT_BINARY_DIR}/Generated)
+
 foreach(file ${Icons})
-  EmbedBinaryInSource(${file}
-    ${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.hpp.in
-    ${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.cpp.in
-    ${PROJECT_BINARY_DIR}/Icons
-    GeneratedFileH
-    GeneratedFileCPP
-  )
-  list(APPEND Srcs ${GeneratedFileH})
-  list(APPEND Includes ${GeneratedFileH})
-  list(APPEND Srcs ${GeneratedFileCPP})
+	EmbedBinaryInSource(${file}
+		${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.hpp.in
+		${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.cpp.in
+		${GENERATED_DIR}/Icons
+		GeneratedFileH
+		GeneratedFileCPP
+	)
+	list(APPEND Srcs ${GeneratedFileH})
+	list(APPEND Includes ${GeneratedFileH})
+	list(APPEND Srcs ${GeneratedFileCPP})
 endforeach()
 
 file(GLOB_RECURSE FileTemplates
@@ -28,64 +30,67 @@ file(GLOB_RECURSE FileTemplates
 )
 
 foreach(file ${FileTemplates})
-  EmbedTextInSource(${file}
-    ${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/TextSourceFileTemplate.hpp.in
-    ${PROJECT_BINARY_DIR}/FileTemplates
-    GeneratedFileH
-  )
-  list(APPEND Srcs ${GeneratedFileH})
-  list(APPEND Includes ${GeneratedFileH})
+	EmbedTextInSource(${file}
+		${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/TextSourceFileTemplate.hpp.in
+		${GENERATED_DIR}/FileTemplates
+		GeneratedFileH
+	)
+	list(APPEND Srcs ${GeneratedFileH})
+	list(APPEND Includes ${GeneratedFileH})
 endforeach()
 
 assign_source_group(${Srcs}) # for VS
+set_source_files_properties(StbImplementation.cpp PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON) #Build SingleFileHeader lib with Implementation define separatly
 
 add_library(Editor ${LIB_TYPE} ${Srcs} ${Includes})
-set_target_properties(Editor PROPERTIES FOLDER "HodEngine")
-target_precompile_headers(Editor PRIVATE "Pch.hpp")
-set_property(TARGET Editor PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
-
-add_dependencies(Editor Core ImGui Window Physics Renderer Game)
-get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}
-	"../.."
-  "${PROJECT_BINARY_DIR}/../.."
-  ${PROJECT_BINARY_DIR}
-	${Core_INCLUDES}
+add_library(HodEngine::Editor ALIAS Editor)
+set_target_properties(Renderer PROPERTIES
+	FOLDER "HodEngine"
+	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
 
-target_include_directories(Editor SYSTEM PRIVATE Stb::Stb PortableFileDialogs::PortableFileDialogs)
+target_include_directories(Editor PUBLIC 
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<INSTALL_INTERFACE:include>
+	PRIVATE ${GENERATED_DIR} SYSTEM Stb::Stb PortableFileDialogs::PortableFileDialogs
+)
+target_precompile_headers(Editor PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
 
-target_compile_definitions(Editor PRIVATE HOD_EDITOR_EXPORT)
 target_link_libraries(Editor
-	Core
-	ImGui
-	Window
-	Physics
-	Renderer
-  Game
+	PUBLIC Core ImGui Window Physics Renderer Game
+)
+
+target_compile_definitions(Editor PUBLIC ${PLATFORM_DEFINE})
+target_compile_definitions(Editor PRIVATE HOD_EDITOR_EXPORT)
+
+add_custom_command(
+	TARGET Editor POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+		${SLANG_COMPILER}
+		$<TARGET_FILE_DIR:Editor>/Tools/slangc.exe
+	COMMENT "Copying ${SLANG_COMPILER} to output directory"
 )
 
 add_custom_command(
-  TARGET Editor POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    ${SLANG_COMPILER}
-    $<TARGET_FILE_DIR:Editor>/Tools/slangc.exe
-  COMMENT "Copying ${SLANG_COMPILER} to output directory"
+	TARGET Editor POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+		${SLANG_DLL}
+		$<TARGET_FILE_DIR:Editor>/Tools/slang.dll
+	COMMENT "Copying ${SLANG_DLL} dll to output directory"
 )
 
 add_custom_command(
-  TARGET Editor POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    ${SLANG_DLL}
-    $<TARGET_FILE_DIR:Editor>/Tools/slang.dll
-  COMMENT "Copying ${SLANG_DLL} dll to output directory"
+	TARGET Editor POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+		${SLANG_DLL_GLSLANG}
+		$<TARGET_FILE_DIR:Editor>/Tools/slang-glslang.dll
+	COMMENT "Copying ${SLANG_DLL_GLSLANG} dll to output directory"
 )
 
-add_custom_command(
-  TARGET Editor POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    ${SLANG_DLL_GLSLANG}
-    $<TARGET_FILE_DIR:Editor>/Tools/slang-glslang.dll
-  COMMENT "Copying ${SLANG_DLL_GLSLANG} dll to output directory"
+install(TARGETS Editor
+	EXPORT HodEngineTargets
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+	RUNTIME DESTINATION bin
+	INCLUDES DESTINATION include
 )
