--- a/Sources/HodEngine/CoreEditor/CMakeLists.txt
+++ b/Sources/HodEngine/CoreEditor/CMakeLists.txt
@@ -2,33 +2,34 @@ cmake_minimum_required(VERSION 3.10)
 
 include(Global)
 
-project(CoreEditor)
+project(CoreEditor LANGUAGES CXX)
 
 CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes)
 
 add_library(CoreEditor ${LIB_TYPE} ${Srcs} ${Includes})
-set_target_properties(CoreEditor PROPERTIES FOLDER "HodEngine")
-target_precompile_headers(CoreEditor PRIVATE "Pch.hpp")
-set_property(TARGET CoreEditor PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
-
-add_dependencies(CoreEditor Editor)
-get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
-get_target_property(Window_INCLUDES Window INCLUDE_DIRECTORIES)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}
-  "../.."
-  ${Core_INCLUDES}
-  ${Window_INCLUDES}
-  ${Application_INCLUDES}
+add_library(HodEngine::CoreEditor ALIAS CoreEditor)
+set_target_properties(CoreEditor PROPERTIES
+	FOLDER "HodEngine"
+	MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
 )
+
+target_include_directories(CoreEditor PUBLIC 
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
+	$<INSTALL_INTERFACE:include>
+)
+target_precompile_headers(CoreEditor PRIVATE $<$<COMPILE_LANGUAGE:CXX>:"${CMAKE_CURRENT_SOURCE_DIR}/Pch.hpp">)
 
 target_link_libraries(CoreEditor
-  Editor
+	PUBLIC Core Editor
 )
-
-if(MSVC)
-    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-endif()
 
 target_compile_definitions(CoreEditor PUBLIC ${PLATFORM_DEFINE})
 target_compile_definitions(CoreEditor PRIVATE HOD_CORE_EDITOR_EXPORT)
+
+install(TARGETS CoreEditor
+	EXPORT HodEngineTargets
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+	RUNTIME DESTINATION bin
+	INCLUDES DESTINATION include
+)
